--- a/Latex/metadaten.sty
+++ b/Latex/metadaten.sty
@@ -3,7 +3,7 @@
 %! Für zusätzliche Autoren '%' vor entsprechenden Zeilen entfernen. (>1 Autor --> Projektarbeit)
 %! Autoren nur in der korrekten Reihenfolge "befüllen"!
 %   Autor/Matrikelnummer 1:
-\newcommand{\autoreins}{Name 1}\newcommand{\matnumeins}{4001234}
+\newcommand{\autoreins}{Max chieck}\newcommand{\matnumeins}{4005738}
 %   Autor/Matrikelnummer 2:
 %\newcommand{\autorzwei}{Name 2}\newcommand{\matnumzwei}{4001235}
 %   Autor/Matrikelnummer 3:
@@ -11,8 +11,8 @@
 %   Autor/Matrikelnummer 4:
 %\newcommand{\autorvier}{Name 4}\newcommand{\matnumvier}{4001237}
 %Adressdaten für Praxisbeleg/Bachelor-Thesis:
-\newcommand{\autorstrasse}{Straße Hausnummer Autor}
-\newcommand{\autorort}{Postleitzahl Ort Autor}
+\newcommand{\autorstrasse}{Am Steinkamp 10}
+\newcommand{\autorort}{08315 Bernsbach}
 \newcommand{\partnerstrasse}{Straße Hausnummer Praxispartner}
 \newcommand{\partnerort}{Postleitzahl Ort Praxispartner}
 %Titel:
