--- a/Latex/metadaten.sty
+++ b/Latex/metadaten.sty
@@ -3,7 +3,7 @@
 %! Für zusätzliche Autoren '%' vor entsprechenden Zeilen entfernen. (>1 Autor --> Projektarbeit)
 %! Autoren nur in der korrekten Reihenfolge "befüllen"!
 %   Autor/Matrikelnummer 1:
-\newcommand{\autoreins}{Max chieck}\newcommand{\matnumeins}{4005738}
+\newcommand{\autoreins}{Max Schieck}\newcommand{\matnumeins}{4005738}
 %   Autor/Matrikelnummer 2:
 %\newcommand{\autorzwei}{Name 2}\newcommand{\matnumzwei}{4001235}
 %   Autor/Matrikelnummer 3:
