--- a/Latex/metadaten.sty
+++ b/Latex/metadaten.sty
@@ -13,12 +13,12 @@
 %Adressdaten für Praxisbeleg/Bachelor-Thesis:
 \newcommand{\autorstrasse}{Am Steinkamp 10}
 \newcommand{\autorort}{08315 Bernsbach}
-\newcommand{\partnerstrasse}{Straße Hausnummer Praxispartner}
-\newcommand{\partnerort}{Postleitzahl Ort Praxispartner}
+\newcommand{\partnerstrasse}{Professor-Richard-Beck-Straße 4}
+\newcommand{\partnerort}{08280 Aue-Bad Schlema}
 %Titel:
-\newcommand{\titel}{Titel der Arbeit}
+\newcommand{\titel}{Konzeption und Implementierung einer zentralen Kundendatenverwaltung}
 %Kurzbeschreibung (für PDF Metadaten):
-\newcommand{\kurzbeschreibung}{}
+\newcommand{\kurzbeschreibung}{Praxisbeleg zur Entwicklung einer Kundendatenbank mit FastAPI und Flutter}
 %Vorgelegt am:
 \newcommand{\abgabedatum}{Abgabedatum}
 %   Jahr wird nur für den Abstract zur Bachelor-Thesis benötigt.
@@ -26,17 +26,17 @@
 %   und ändert Texte von "Praxisbeleg" zu "Bachelor-Thesis".
 %   Der Abstract kann im Anschluss einzeln gebaut werden.
 %! Das \jahr Kommando darf nicht zusammen mit mehreren Autoren verwendet werden.
-\newcommand{\jahr}{Jahr}
+%\newcommand{\jahr}{Jahr}
 
 %   Dieses Kommando bestimmt, ob ein Sperrvermerk eingebunden wird.
 %   Der "Wert" des Kommandos ist irrelevant.
-\newcommand{\sperre}{1}
+%\newcommand{\sperre}{1}
 %Studiengang:
-\newcommand{\studiengang}{Studiengang}
+\newcommand{\studiengang}{Wirtschaftsinformatik}
 %Seminargruppe:
-\newcommand{\seminargruppe}{Seminargruppe}
+\newcommand{\seminargruppe}{WI24}
 %Studienrichtung:
-\newcommand{\studienrichtung}{Studienrichtung}
+\newcommand{\studienrichtung}{PMEK}
 %Betreuer 1:
 \newcommand{\betreuereins}{Betreuer Praxispartner}
 %Betreuer 2:
