--- a/Latex/literatur.bib
+++ b/Latex/literatur.bib
@@ -1,22 +1,31 @@
 % Encoding: UTF-8
 @COMMENT{laut HAWA sind Institutionsnamen in CAPS zu schreiben}
 
-@Online{Vorlage,
-  author  = {Hille, Willy and Pohle, Colin and Sczyrba, Dominic},
-  date    = {2021},
-  title   = {LaTeX Vorlage Staatliche Studienakademie Glauchau},
-  url     = {https://github.com/ba-latex/Vorlage-Latex},
-  urldate = {2023-05-24},
-  version = {4.5.0},
+@Online{PostgreSQL,
+  author  = {{The PostgreSQL Global Development Group}},
+  title   = {PostgreSQL 16 Documentation},
+  url     = {https://www.postgresql.org/docs/current/},
+  urldate = {2024-01-15},
+  date    = {2023},
+  titleaddon = {Relational Database Management System}
 }
 
-@Online{HILLE2021,
-  author  = {Willy Hille},
+@Book{FlutterDev,
+  author    = {Napoli, Marco L.},
+  title     = {Beginning Flutter: A Hands On Guide to App Development},
+  year      = {2019},
+  publisher = {Wrox},
+  isbn      = {978-1119578058},
+  location  = {Hoboken},
+}
+
+@Online{FastAPI,
+  author  = {Ramírez, Sebastián},
+  title   = {FastAPI Documentation},
+  url     = {https://fastapi.tiangolo.com/},
+  urldate = {2024-01-15},
   date    = {2023},
-  title   = {A docker container for building LaTeX documents},
-  url     = {https://github.com/jemand771/latex-build/pkgs/container/latex-build},
-  urldate = {2023-02-09},
-  version = {1.7.1},
+  titleaddon = {High performance web framework for building APIs with Python}
 }
 
 @Online{HAWA,
