--- a/Latex/main.tex
+++ b/Latex/main.tex
@@ -17,10 +17,10 @@
 \vfuzz=10pt
 %! Die laut HAWA obligatorische "Einwilligungserklärung in die Archivierung und Veröffentlichung der Bachelor-Thesis/Diplomarbeit an der Dualen Hochschule Sachsen" ist an dieser Stelle einzufügen!
 %! Das DHSN-Dokument beinhaltet nicht die Möglichkeit, diese Arbeit vollständig (gegen Einsicht) zu sperren - diesen Zweck erfüllt der Sperrvermerk.
-\ifthenelse{\isundefined{\sperre}}{}{\include{vorlage/Sperrvermerk}}
+%\ifthenelse{\isundefined{\sperre}}{}{\include{vorlage/Sperrvermerk}}
 \vfuzz=0.1pt
 
-\ifthenelse{\isundefined{\jahr}}{}{\input{vorlage/Platzhalter_Themenblatt}}
+%\ifthenelse{\isundefined{\jahr}}{}{\input{vorlage/Platzhalter_Themenblatt}}
 
 %! Nicht benötigte Verzeichnisse hier auskommentieren
 %? Inhaltsverzeichnis
@@ -29,24 +29,16 @@
 \newpage
 \vfuzz=0.1pt
 
-%? Abbildungsverzeichnis
-\listoffigures
-\newpage
-
-%? Tabellenverzeichnis
-\listoftables
-\newpage
-
-%? Programmcodeverzeichnis
-\listofcodes
-\newpage
-
-%? Formelverzeichnis
-\listofformeln
-\newpage
-
-%? Abkürzungsverzeichnis
-\include{inhalt/Abkürzungen}
+% Alle anderen Verzeichnisse auskommentiert:
+%\listoffigures
+%\newpage
+%\listoftables
+%\newpage
+%\listofcodes
+%\newpage
+%\listofformeln
+%\newpage
+%\include{inhalt/Abkürzungen}
 
 %! Hier beginnt der eigentliche Inhalt der Arbeit.
 \mainmatter
@@ -61,8 +53,8 @@
 % Diese werden folgendermaßen eingebunden:
 % \include{inhalt/Inhalt}
 
-%! Doku-/Testinhalt, diese Zeile bei Nutzung der Vorlage entfernen
-\include{vorlage/Doku-Test}
+%! Der neue Inhalt:
+\include{inhalt/Praxisbeleg}
 
 %? Quellen- und Literaturverzeichnis
 % Quellen neigen dazu, zu breite Zeilen durch (z.B.) schlecht umgebrochene URLs zu erzeugen, die sich kaum vermeiden lassen. --> Ignorieren
@@ -71,7 +63,7 @@
 \hfuzz=0.1pt
 
 %? Anhang
-\include{inhalt/Anhang}
+%\include{inhalt/Anhang}
 %!##########################################
 
 \end{document}
