--- a/Latex/metadaten.sty
+++ b/Latex/metadaten.sty
@@ -42,6 +42,6 @@
 %Betreuer 2:
 \newcommand{\betreuerzwei}{Betreuer DHSN}
 %Institution 1:
-\newcommand{\institutioneins}{Firma Praxispartner}
+\newcommand{\institutioneins}{WHS Informationssysteme GmbH}
 %Institution 2:
 \newcommand{\institutionzwei}{Duale Hochschule Glauchau}
