--- a/Latex/metadaten.sty
+++ b/Latex/metadaten.sty
@@ -20,7 +20,7 @@
 %Kurzbeschreibung (für PDF Metadaten):
 \newcommand{\kurzbeschreibung}{Praxisbeleg zur Entwicklung einer Kundendatenbank mit FastAPI und Flutter}
 %Vorgelegt am:
-\newcommand{\abgabedatum}{Abgabedatum}
+\newcommand{\abgabedatum}{16.01.2026}
 %   Jahr wird nur für den Abstract zur Bachelor-Thesis benötigt.
 %   Das Jahr-Kommando aktiviert den Themenblatt-Platzhalter.
 %   und ändert Texte von "Praxisbeleg" zu "Bachelor-Thesis".
