--- a/Latex/main.tex
+++ b/Latex/main.tex
@@ -46,7 +46,7 @@
 %! Eine der folgenden Zeilen wieder aktivieren und entsprechende Datei ablegen
 %? druckt Firmenlogo ab Kapitel 1 in Kopfzeile - SVG ist, auch bei kleinen Grafiken, zu bevorzugen, wenn vorhanden
 %\lohead{\includesvg[height=8mm,inkscapelatex=false]{bilder/firmenlogo}}
-%\lohead{\includegraphics[height=8mm]{bilder/firmenlogo}}
+\lohead{\includegraphics[height=8mm]{bilder/firmenlogo}}
 
 % Es ist möglich, die ganze Arbeit in eine Datei (z.B. "Inhalt.tex") zu schreiben,
 % allerdings empfiehlt es sich, zur besseren Strukturierung mehrere Dateien, bspw. eine pro Kapitel, zu verwenden.
