--- a/Latex/main.tex
+++ b/Latex/main.tex
@@ -17,7 +17,7 @@
 \vfuzz=10pt
 %! Die laut HAWA obligatorische "Einwilligungserklärung in die Archivierung und Veröffentlichung der Bachelor-Thesis/Diplomarbeit an der Dualen Hochschule Sachsen" ist an dieser Stelle einzufügen!
 %! Das DHSN-Dokument beinhaltet nicht die Möglichkeit, diese Arbeit vollständig (gegen Einsicht) zu sperren - diesen Zweck erfüllt der Sperrvermerk.
-%\ifthenelse{\isundefined{\sperre}}{}{\include{vorlage/Sperrvermerk}}
+\include{inhalt/abstract}
 \vfuzz=0.1pt
 
 %\ifthenelse{\isundefined{\jahr}}{}{\input{vorlage/Platzhalter_Themenblatt}}
