--- a/Latex/literatur.bib
+++ b/Latex/literatur.bib
@@ -1,31 +1,28 @@
 % Encoding: UTF-8
 @COMMENT{laut HAWA sind Institutionsnamen in CAPS zu schreiben}
 
-@Online{PostgreSQL,
-  author  = {{The PostgreSQL Global Development Group}},
-  title   = {PostgreSQL 16 Documentation},
-  url     = {https://www.postgresql.org/docs/current/},
-  urldate = {2024-01-15},
-  date    = {2023},
-  titleaddon = {Relational Database Management System}
-}
-
-@Book{FlutterDev,
-  author    = {Napoli, Marco L.},
-  title     = {Beginning Flutter: A Hands On Guide to App Development},
-  year      = {2019},
-  publisher = {Wrox},
-  isbn      = {978-1119578058},
-  location  = {Hoboken},
-}
-
-@Online{FastAPI,
-  author  = {Ramírez, Sebastián},
+@Online{fastapi_docs,
+  author  = {Sebastián Ramírez},
+  date    = {2024},
   title   = {FastAPI Documentation},
   url     = {https://fastapi.tiangolo.com/},
-  urldate = {2024-01-15},
-  date    = {2023},
-  titleaddon = {High performance web framework for building APIs with Python}
+  urldate = {2026-01-14},
+}
+
+@Online{postgresql_docs,
+  author  = {{The PostgreSQL Global Development Group}},
+  date    = {2024},
+  title   = {PostgreSQL 16: Row Level Security Policies},
+  url     = {https://www.postgresql.org/docs/current/ddl-rowsecurity.html},
+  urldate = {2026-01-14},
+}
+
+@Online{flutter_dev,
+  author  = {{Google LLC}},
+  date    = {2024},
+  title   = {Flutter Architectural Overview},
+  url     = {https://docs.flutter.dev/resources/architectural-overview},
+  urldate = {2026-01-14},
 }
 
 @Comment{jabref-meta: databaseType:biblatex;}
