--- a/Latex/metadaten.sty
+++ b/Latex/metadaten.sty
@@ -36,7 +36,7 @@
 %Seminargruppe:
 \newcommand{\seminargruppe}{WI24}
 %Studienrichtung:
-\newcommand{\studienrichtung}{PMEK}
+\newcommand{\studienrichtung}{Bachelor of Science}
 %Betreuer 1:
 \newcommand{\betreuereins}{Betreuer Praxispartner}
 %Betreuer 2:
