--- a/Latex/vorlage/vorlage.tex
+++ b/Latex/vorlage/vorlage.tex
@@ -76,8 +76,8 @@
 \input{vorlage/vorlage_subs/dirtree}
 
 %! PageBreaks nach jeder Section
-\let\oldchapter\chapter
-\renewcommand\chapter{\clearpage\oldchapter}
+%\let\oldchapter\chapter
+%\renewcommand\chapter{\clearpage\oldchapter}
 
 %! Code-Umgebungen
 \input{vorlage/vorlage_subs/minted}
