--- a/Latex/literatur.bib
+++ b/Latex/literatur.bib
@@ -1,28 +1,39 @@
 % Encoding: UTF-8
-@COMMENT{laut HAWA sind Institutionsnamen in CAPS zu schreiben}
 
-@Online{fastapi_docs,
-  author  = {Sebastián Ramírez},
-  date    = {2024},
-  title   = {FastAPI Documentation},
-  url     = {https://fastapi.tiangolo.com/},
-  urldate = {2026-01-14},
+@Book{ELMASRI2021,
+  author    = {Ramez Elmasri and Shamkant B. Navathe},
+  date      = {2021},
+  title     = {Fundamentals of Database Systems},
+  edition   = {7. Global Edition},
+  isbn      = {9781292097619},
+  publisher = {Pearson Education},
+  address   = {Harlow, England}
 }
 
-@Online{postgresql_docs,
-  author  = {{The PostgreSQL Global Development Group}},
-  date    = {2024},
-  title   = {PostgreSQL 16: Row Level Security Policies},
-  url     = {https://www.postgresql.org/docs/current/ddl-rowsecurity.html},
-  urldate = {2026-01-14},
+@Book{FIELDING2000,
+  author    = {Roy Thomas Fielding},
+  date      = {2000},
+  title     = {Architectural Styles and the Design of Network-based Software Architectures},
+  publisher = {University of California, Irvine},
+  note      = {Dissertation},
+  url       = {https://www.ics.uci.edu/~fielding/pubs/dissertation/top.htm}
 }
 
-@Online{flutter_dev,
-  author  = {{Google LLC}},
-  date    = {2024},
-  title   = {Flutter Architectural Overview},
-  url     = {https://docs.flutter.dev/resources/architectural-overview},
-  urldate = {2026-01-14},
+@Book{WOLF2023,
+  author    = {Jürgen Wolf},
+  date      = {2023},
+  title     = {Linux-Kompendium: Das Handbuch für Administratoren},
+  edition   = {1. Auflage},
+  isbn      = {9783836289290},
+  publisher = {Rheinwerk Computing},
+  address   = {Bonn}
 }
 
-@Comment{jabref-meta: databaseType:biblatex;}
+@Book{ZAMMETTI2021,
+  author    = {Frank Zammetti},
+  date      = {2021},
+  title     = {Practical Flutter: Learn to Build Cross-Platform Apps},
+  isbn      = {9781484249710},
+  publisher = {Apress},
+  address   = {New York}
+}
